# abstract_classifier

./: .gitignore  README.md  SEDCIP24_TACC.xlsx  broad_fields.json  build_index.py  cip_metadata.json  classify.py  evaluate.py  evaluation_report.json  parse_fields.py  pyproject.toml  requirements.txt
config/: default.yaml  vista.yaml
data/processed/: SEDCIP24.json  detailed_fields.json  major_fields.json
slurm/: activate.sh  build_index.sbatch  classify.sbatch  run_pipeline.sbatch  setup_env.sh
src/cip_classifier/: __init__.py  __main__.py  build_index.py  classify.py  config.py  evaluate.py  parse_fields.py  utils.py
