[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cip-classifier"
version = "0.1.0"
description = "Classify research abstracts against CIP taxonomy using embedding similarity"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "faiss-cpu>=1.7.4",
    "numpy>=1.24",
    "openpyxl>=3.1",
    "pandas>=2.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
cip-classifier = "cip_classifier.__main__:cli"

[tool.setuptools.packages.find]
where = ["src"]
